Saludar por nombre

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
     <body>
         <h1>Hola</h1>
+        <form id="saludador-form">
+            <label for = "nombre-input">Ingrese su nombre</label>
+            <input id="nombre-input" type="text">
+            <input type="submit" value="Saludar">
+          </form>
         <script src ="./src/saludador.js"></script>
     </body>
 </html>
