--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
             <label for="edad-input">Edad</label>
             <input id="edad-input" type="number">
 
+            <label for = "idioma-input">Idioma</label>
+            <select id="idioma-input">
+                <option value="espaniol">Espanol</option>
+                <option value="ingles">Ingles</option>
+                <option value="aleman">Aleman</option>
+                <option value="ruso">Ruso</option>
+                <option value="chino">Chino</option>
+                <option value="frances">Frances</option>
+            </select>
+
             <input type="submit" value="Saludar">
           </form>
         <script src ="./src/saludador.js"></script>
